Archive/8e4eb094455cccd595020987916e3cc8-7063104e283ed82d51a6fde7370c6e59/output
main.cpp:11:3: error: 'id<deleter_t>::~id()' cannot be overloaded
   ~id() {
   ^
main.cpp:8:3: error: with 'id<deleter_t>::~id()'
   ~id() {
   ^
main.cpp: In function 'int main()':
main.cpp:27:15: error: missing template arguments before '(' token
  auto one = id(deleter_one);
               ^
main.cpp:28:15: error: missing template arguments before '(' token
  auto two = id(deleter_two);
               ^
